# hardproof

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INSPIRATION.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  SUPPORT.md  __init__.py  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-signers
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
constraints/: ci.txt
crucible_agent/: __init__.py  compat.py  config.py  constants.py  errors.py  paths.py  plugin.py
crucible_agent/commands/: cli.py  shared.py  slash.py
crucible_agent/domain/: __init__.py  enums.py  models.py  snapshots.py  transitions.py
crucible_agent/hooks/: __init__.py  context.py  sessions.py  tool_policy.py  verification.py
crucible_agent/migrations/: 001_initial.sql  002_gatehouse.sql
crucible_agent/policy/: profiles.py  stage_rules.py  tool_rules.py  verification_rules.py  waivers.py
crucible_agent/services/: __init__.py  approvals.py  artifacts.py  authority.py  decisions.py  evidence.py  reports.py  risks.py  runs.py  sessions.py  tasks.py  waivers.py
crucible_agent/storage/: __init__.py  database.py  migrations.py  repository.py
crucible_agent/templates/: __init__.py  completion.md  plan.md
crucible_agent/tools/: __init__.py  handlers.py  schemas.py
docs/: AGENTS.md  README.md  architecture.md  command-reference.md  compatibility.md  configuration-and-migrations.md  development.md  hermes-agent-guide.md  policy-packs.md  profiles.md  protocol.md  releasing.md  repository-map.md  security-model.md  testing.md
docs/adr/: 0001-clean-room-implementation.md  0002-standalone-hermes-plugin.md  0003-project-local-sqlite.md  0004-evidence-freshness.md  0005-stage-aware-tool-policy.md  0006-ordered-policy-traces.md  0007-public-rebrand-hardproof.md  0008-workcell-task-attempt-state-machines.md  0009-shared-workspace-workcell-scheduling.md  0010-workcell-child-result-validation.md  0011-provider-neutral-workcell-model-tiers.md  0012-transactional-workcell-claims.md  0013-workcell-interruption-recovery.md
docs/codex/: DECISIONS.md  GOAL.md  RISKS.md  STATUS.md
docs/examples/: first-run.md
docs/maintenance/: dependency-pr-readiness-v0.3.0.md  v0.2.0-docs-and-hygiene-audit.md  v0.3.0-entry-readiness.md  v0.4.0-entry-readiness.md
docs/plans/: v0.2.0-implementation.md  v0.2.0-remaining-work.md  v0.3.0-implementation.md
docs/rebrand/: hardproof-rename-manifest.md  hardproof-residual-name-audit.md
hardproof/: AGENTS.md  __init__.py  compat.py  config.py  constants.py  errors.py  paths.py  plugin.py
scripts/: __init__.py  build_sbom.py  check_docs.py  ci_pytest.py  inspect_hermes_api.py  smoke_install.py  validate_signing_config.py
tests/: AGENTS.md
(+163 files in other folders)
