[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardproof"
version = "0.2.0"
description = "A persistent, risk-aware engineering protocol for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Hardproof contributors" }]
dependencies = ["PyYAML>=6,<7"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "cyclonedx-bom>=7",
  "hypothesis>=6",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "twine>=5",
  "types-PyYAML>=6",
]

[project.entry-points."hermes_agent.plugins"]
hardproof = "hardproof.plugin"

[tool.setuptools]
packages = { find = { include = ["hardproof*"] } }
include-package-data = true

[tool.setuptools.package-data]
hardproof = [
  "py.typed",
  "migrations/*.sql",
  "templates/*.md",
  "skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hardproof"]
explicit_package_bases = true
